[gd_scene load_steps=12 format=3 uid="uid://bx68bgxgvgikp"]

[ext_resource type="Texture2D" uid="uid://deqgf6aj6311k" path="res://UI/Buttons/heberger_base.png" id="1_4b5qo"]
[ext_resource type="Script" uid="uid://d4kpqglf5sk6q" path="res://UI/Scripts/multijoueur_setup.gd" id="1_o12y3"]
[ext_resource type="Texture2D" uid="uid://dkihidd2v7lac" path="res://UI/Buttons/heberger_clicked.png" id="2_n4tar"]
[ext_resource type="Texture2D" uid="uid://btyi7knus1737" path="res://UI/Buttons/heberger_hovered.png" id="3_fbyl2"]
[ext_resource type="Texture2D" uid="uid://yh4q2pq42qs5" path="res://UI/Buttons/rejoindre_base.png" id="4_rfk4f"]
[ext_resource type="Texture2D" uid="uid://dco5aqoga2lf2" path="res://UI/Buttons/rejoindre_clicked.png" id="5_ukewu"]
[ext_resource type="Texture2D" uid="uid://crfklhgopg40s" path="res://UI/Buttons/rejoindre_hovered.png" id="6_kjitl"]
[ext_resource type="Texture2D" uid="uid://bknc5skjp7s4v" path="res://UI/Buttons/retour_base.png" id="7_1td8b"]
[ext_resource type="Texture2D" uid="uid://dd20mihsbd7tw" path="res://UI/Buttons/retour_clicked.png" id="8_0d1fb"]
[ext_resource type="Texture2D" uid="uid://bsx000i85450y" path="res://UI/Buttons/retour_hovered.png" id="9_umv4g"]

[sub_resource type="LabelSettings" id="LabelSettings_cics0"]
font_size = 32

[node name="MultijoueurSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o12y3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = -73.0
offset_right = 1683.0
offset_bottom = 965.0
scale = Vector2(1, 20)
color = Color(0.529412, 0.478431, 0.317647, 1)

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 671.0
offset_top = 313.0
offset_right = 929.0
offset_bottom = 579.0
theme_override_constants/separation = 50

[node name="Heberger" type="TextureButton" parent="Menu"]
layout_mode = 2
texture_normal = ExtResource("1_4b5qo")
texture_pressed = ExtResource("2_n4tar")
texture_hover = ExtResource("3_fbyl2")

[node name="Rejoindre" type="TextureButton" parent="Menu"]
layout_mode = 2
texture_normal = ExtResource("4_rfk4f")
texture_pressed = ExtResource("5_ukewu")
texture_hover = ExtResource("6_kjitl")

[node name="Adresse" type="TextEdit" parent="Menu"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
placeholder_text = "Adresse IP"

[node name="Retour" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 832.0
offset_right = 246.0
offset_bottom = 872.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("7_1td8b")
texture_pressed = ExtResource("8_0d1fb")
texture_hover = ExtResource("9_umv4g")

[node name="TexteAttente" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 588.0
offset_top = 427.0
offset_right = 1023.0
offset_bottom = 475.0
text = "En attente d'un adversaire..."
label_settings = SubResource("LabelSettings_cics0")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Menu/Heberger" to="." method="_on_heberger_pressed"]
[connection signal="pressed" from="Menu/Rejoindre" to="." method="_on_rejoindre_pressed"]
[connection signal="pressed" from="Retour" to="." method="_on_retour_pressed"]
